# tree

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
