[package]
name = "tree"
version = "0.2.1"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
percent-encoding = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
qr2term = "0.3"
local-ip-address = "0.6"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization, slower build
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols from binary
